external-crates/move/crates/move-compiler/tests/move_check/typing/uninferred_type_unpack_decl.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04010]: cannot infer type
  ┌─ tests/move_check/typing/uninferred_type_unpack_decl.move:5:13
  │
5 │         let S{};
  │             ^^^ Could not infer this type. Try adding an annotation
